Start writing future directions

--- a/content/20.data_objects.md
+++ b/content/20.data_objects.md
@@ -25,7 +25,7 @@ The final mechanism by which data is selected is for discrete data points, typic
 At present, this is done by first identifying which data files intersect with a given selector, then selecting individual points.
 There is no hierarchical data selection conducted in this system, as we do not yet allow for re-ordering of data on disk or in-memory which would facilitate hierarchical selection through the use of operations such as Morton indices.
 
-### Selection Routines
+### Selection Routines {#sec:selection_routines}
 
 Given these set of hierarchical selection methods, all of which are designed to provide opportunities for early-termination, each *geometric* selector object is required to implement a small set of methods to expose its functionality to the hierarchical selection process.
 Duplicative functions often result from attempts to avoid expensive calculations that take into account boundary conditions such as periodicity and reflectivity unless necessary.
