--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -19,7 +19,7 @@ This chunking type is the most common strategy for parallel-decomposition.
 Necessarily, both indexing and selection methods must be implemented to expose these different chunking interfaces; `yt` utilizes specific methods for each of the primary data types that it can access.
 We detail these below, specifically describing how they are implemented and how they can be improved in future iterations.
 
-### Grid Analysis
+### Grid Analysis {#sec:grid_analysis}
 
 ![The grid structure of the simulation `IsolatedGalaxy`](){#fig:grid_organization}
 
