Finish new directions

--- a/content/68.future_directions.md
+++ b/content/68.future_directions.md
@@ -1,5 +1,9 @@
 ## Future Directions
 
+The development of `yt` has changed over time, as it has increasingly served as a stable platform for analysis of data and maintenance efforts have taken greater resources.
+However, despite that, there are a number of exciting areas within `yt` that could serve as targets of future development.
+In addition to these technical areas, expanding the user-base and developer-base of `yt` can serve to better support diverse use cases and applications.
+
 ### Improvements to Internal Systems {#sec:improvements_to_internal_systems}
 
 **Optimization**
@@ -30,18 +34,41 @@ However, given a successful implementation, much of the code that provides acces
 Utilizing these data structures will also enable access to bitmap-arrays for caching of data selection results, reducing overall memory usage and improving performance.
 
 **Testing infrastructure**
-#sec:unit_testing
-#sec:answer_testing
 
-### New Features {#sec:new_features}
+As dicussed in [[#sec:unit_testing]] and [[#sec:answer_testing]], the `yt` testing infrastructure is prone to time-consuming and memory-intense operations.
+Additionally, the bifurcation between those tests executable using nose and those executable using pytest presents a challenge for new contributors.
+Future development focused on unifying these two test suites, while also reducing the barriers to entry for executing a full test suite, will promote better test "hygiene" and enable contributors to rely on the underlying testing infrastructure run locally on their machines.
 
-- More integration with _in situ_ analysis systems like `libyt`
-- Forward-looking utilization of accelerators and other array-oriented programming
-- Integration with external libraries such as pytorch-spatial, etc
-- Further integration with other domains besides astronomy
+Reducing the requirements for running and examining answer tests, more specifically examining the *results* of answer tests, could take the form of comparisons against hashes, or application of locality-sensitive hashing techniques.
+At present, comparing test results to a fixed "gold standard" requires downloading substantial amounts of data to local development workstations -- both the input data and the certified results.
 
 ### Quality of Life {#sec:quality_of_life}
 
-- Static typing
-- Refactoring for the long term
-- Improving visual representation of `yt` objects
+Improving the "quality of life" of using `yt` can provide a more comfortable analysis environment and reduce friction between researchers and inquiry.
+Since the development of `yt`, the Python language has enabled and expanded support for type "hinting," wherein the types of variables are indicated by the code itself in (non-binding) annotations.
+For instance, declaring that the "center" argument to a constructing a sphere selector must be a 3-element tuple or the strings "c" can enable integrated development environments (IDEs) such as VS Code to supply helpful information when a user has incorrectly specified the argument.
+This also helps with automated testing, where a properly type-hinted codebase can be examined for violations of these input and return types.
+While much of `yt` has been annotated with type hints, there is still a considerable amount of the code base that has not.
+Improving the coverage of type hinting could potentially improve the development experience as well as the experience of using `yt`.
+
+As discussed in [[#sec:jupyter_integration]], objects in Python can be provided with special methods that enhance their visual representation in the Jupyter Notebook.
+Other libraries, including Pandas, have leveraged this to provide nicer, more informative visual representations of datasets that facilitate at-a-glance understanding of their layout and contents.
+At present, `yt` does not have an extensive set of objects that provide user-friendly representations in this way.
+A reasonable amount of effort in this area could bring a great deal of additional information and orientation to users, particularly those that are new to the project.
+For instance, visual representations of dataset layout, format, size, etc would be appropriate enhancements.
+
+### New Features {#sec:new_features}
+
+New feature development centers on two main areas: connecting with new and emerging ecosystems of libraries and packages, and development of features to support external communities of researchers.
+The rapid evolution of toolchains and projects related to machine learning and AI has presented numerous, currently somewhat underexplored, opportunities for integration with `yt`.
+Development of high-level and meaningful connections with libraries such as `pytorch-spatial` may unlock functionality and new discovery spaces for researchers seeking to apply AI techniques to simulation data from astronomy and other communities.
+
+Additional high-priority areas of new feature development include deeper connections with _in situ_ analysis and visualization systems such as `libyt`.
+`libyt`, while initially created as a `yt`-specific platform to connect MPI-parallel applications to `yt`, provides flexible, Python-centric means of communicating between simulation platforms and Python scripts as well as running Jupyter kernels.
+Further developments in `yt` to better support flexible data decomposition and arrangement would benefit `libyt` as it scales to higher processor count and data volume.
+
+Finally, the biggest realm of new feature development that is available to `yt` is the addition of algorithms and methods from different domains outside of astronomy.
+While `yt` has been applied outside of astrophysical simulations, there is a wealth of algorithms and techniques that have not been made accessible.
+These span tasks such as feature identification, visualization, dimensionality reduction, and other domain-specific techniques.
+One of the most important goals we have with `yt` is to provide a platform that enables these domain-specific techniques to be applied more generally and to facilitate direct technology transfer between domains.
+
