--- a/content/50.halo_finding_and_catalogs.md
+++ b/content/50.halo_finding_and_catalogs.md
@@ -1,7 +1,7 @@
 ## Halo-Finding and Catalogs {#sec:halo_finding}
 
-In cosmological simulations, dark matter is nearly always represented as a collection of collisionless particles. **CITE SOMETHING ABOUT VLASOV GRID SOLUTIONS**
-This is well-suited to approximating it as a collisionless fluid; however, the identification of structures within that collection of particles can take on several forms, addressing different use cases to different degrees of accuracy. **CITE HALO FINDING COMPARISON PAPER**
+In cosmological simulations, dark matter is nearly always represented as a collection of collisionless particles.
+This is well-suited to approximating it as a collisionless fluid; however, the identification of structures within that collection of particles can take on several forms, addressing different use cases to different degrees of accuracy. [@doi:10.1111/j.1365-2966.2011.18858.x]
 Being able to identify halos, as well as their associated baryonic content, is necessary for rapid analysis of cosmological simulations.
 Furthermore, convergence studies and cross-simulation comparisons requires a consistent method for identifying dark matter halos, as well as the ability to track their growth over time.
 
