--- a/content/55.scaling_parallelism.md
+++ b/content/55.scaling_parallelism.md
@@ -69,9 +69,7 @@ Common applications of this include iterating over datasets to identify quantiti
 Using multiple levels of parallelism allows researchers to allocate a large processor count job on an HPC resource and dedicate individual portions of it to each dataset in a set of data outputs.
 For many types of data analysis, particularly those operations conducted across a range of outputs, this allows much easier strong scaling.
 
-### Performance of Operations
-
-### Inline Analysis
+### Inline Analysis {#sec:inline_analysis}
 
 It is possible to instrument a simulation code to call Python routines inline during its execution.
 Enzo has been instrumented in such a fashion; it accepts parameters that govern when and how frequently Python is called.
@@ -85,4 +83,4 @@ This non-standardized approach to conducting _in situ_ visualization led to the 
 This library encapsulates all Python API calls, manages references, and provides a systematic method for providing data pointers to Python.
 `libyt` provides a stable C-based API, and is accessible from numerous different languages.
 It also provides a custom-built `yt` frontend for accepting data.
-A more complete description is outside the scope of this paper, and we refer the reader to (**MJT: cite in prep manuscript**).
+A more complete description is outside the scope of this paper, and we refer the reader to Tsai, et al, in prep (2025).
