adjust authorship policy header level

--- a/content/02.authorship_policy.md
+++ b/content/02.authorship_policy.md
@@ -1,4 +1,4 @@
-# Authorship Policy
+## Authorship Policy
 
 We note that the author list for this paper is, by design, extensive.
 We have separated the authors into those that contributed to the text (whose names are ordered **somehow TBD**) and those that are members of the `yt` community.
@@ -6,7 +6,7 @@ The authors from each group have been indicated in the respective author affilia
 
 This paper was developed collaboratively, using the Manubot [@url:https://github.com/greenelab/manubot] system for collaborating on and reviewing contributed text.
 
-> 
+>
 > To add yourself to the author list, please follow the instructions in our
 > [README](https://github.com/yt-project/yt-4.0-paper/blob/master/README.md#authorship-policy).
-> 
+>
