--- a/content/56.development_procedure.md
+++ b/content/56.development_procedure.md
@@ -102,7 +102,7 @@ This allows a different cadence, and also enables individuals _not_ interested i
 Larger dataset answers are stored in on our continuous integration servers; a YAML file in the main `yt` repository stores the current version number for those answers, which is incremented (via a pull request) when needed.
 Requiring this clear decision-making process allows for both collaborative discussion and community governance over the degree of answer drift allowed.
 In contrast to the unit tests, answer tests rely on a custom-built legacy plugin that has not been ported to pytest; efforts have stalled to complete this porting, and at the present the answer-testing framework still utilizes the nosetests library.
-This is discussed somewhat further in #sec:future_directions.
+This is discussed somewhat further in @sec:future_directions.
 
 ### Code Review
 
