--- a/content/70.community_building.md
+++ b/content/70.community_building.md
@@ -55,4 +55,4 @@ Closing bug reports -- and the development work associated with identifying, tra
 Typically, measuring the degree of engagement in a project is done by examining the amount of activity that surrounds it; this can be through development, mailing list or other discussion forum engagement, or through citations of a paper.
 These metrics are valuable, but incomplete.
 Furthermore, their quantification presents challenges: how does migration of a project (and a community) from one form of interaction (such as a mailing list) to another (such as Slack or Github Issues) impact the perceived growth or health of that project?
-As such, we have attempted to build a proxy for the development metrics by examining activity around pull requests (as below in Figure #fig:pr-closing-time) and have opted to elide discussion of the activity of the project through the currently dominant medium of Slack.
+As such, we have attempted to build a proxy for the development metrics by examining activity around pull requests (as below in Figure @fig:pr-closing-time) and have opted to elide discussion of the activity of the project through the currently dominant medium of Slack.
