--- a/content/80.future_directions.md
+++ b/content/80.future_directions.md
@@ -35,7 +35,7 @@ Utilizing these data structures will also enable access to bitmap-arrays for cac
 
 **Testing infrastructure**
 
-As dicussed in [[#sec:unit_testing]] and [[#sec:answer_testing]], the `yt` testing infrastructure is prone to time-consuming and memory-intense operations.
+As dicussed in @sec:unit_testing and @sec:answer_testing, the `yt` testing infrastructure is prone to time-consuming and memory-intense operations.
 Additionally, the bifurcation between those tests executable using nose and those executable using pytest presents a challenge for new contributors.
 Future development focused on unifying these two test suites, while also reducing the barriers to entry for executing a full test suite, will promote better test "hygiene" and enable contributors to rely on the underlying testing infrastructure run locally on their machines.
 
@@ -51,7 +51,7 @@ This also helps with automated testing, where a properly type-hinted codebase ca
 While much of `yt` has been annotated with type hints, there is still a considerable amount of the code base that has not.
 Improving the coverage of type hinting could potentially improve the development experience as well as the experience of using `yt`.
 
-As discussed in [[#sec:jupyter_integration]], objects in Python can be provided with special methods that enhance their visual representation in the Jupyter Notebook.
+As discussed in @sec:jupyter_integration, objects in Python can be provided with special methods that enhance their visual representation in the Jupyter Notebook.
 Other libraries, including Pandas, have leveraged this to provide nicer, more informative visual representations of datasets that facilitate at-a-glance understanding of their layout and contents.
 At present, `yt` does not have an extensive set of objects that provide user-friendly representations in this way.
 A reasonable amount of effort in this area could bring a great deal of additional information and orientation to users, particularly those that are new to the project.
