--- a/content/33.data-formats-and-frontends.md
+++ b/content/33.data-formats-and-frontends.md
@@ -6,7 +6,7 @@ This template sets out the frontend information drawn from frontends.yaml.
 
 {% for frontend in frontends %}
 
-### {{frontend.name}}
+**{{frontend.name}}**
 
 **Index Type:** {{ frontend.index_type | join(", ") }}
 
