Fix RADMC-3D reference

--- a/content/manual-references.bib
+++ b/content/manual-references.bib
@@ -38,3 +38,17 @@ archivePrefix = {arXiv},
     year   = 2021,
     month  = jun
 }
+
+@software{2012ascl.soft02015D,
+       author = {{Dullemond}, C.~P. and {Juhasz}, A. and {Pohl}, A. and {Sereshti}, F. and {Shetty}, R. and {Peters}, T. and {Commercon}, B. and {Flock}, M.},
+        title = "{RADMC-3D: A multi-purpose radiative transfer tool}",
+ howpublished = {Astrophysics Source Code Library, record ascl:1202.015},
+         year = 2012,
+        month = feb,
+          eid = {ascl:1202.015},
+archivePrefix = {ascl},
+       eprint = {1202.015},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ascl.soft02015D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
